Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -192,7 +192,7 @@ footer.bk-footer .widget.content {
   float: right;
   position: relative;
   background-color: transparent;
-  max-width: 690px;
+  width: 80%;
 }
 
 .widget.extendednavigation a.pull {
@@ -200,7 +200,6 @@ footer.bk-footer .widget.content {
 }
 
 .widget.extendednavigation ul {
-  float: left;
   padding: 0;
   margin: 0;
 }
